# tensorflow

./: .gitignore  MODULE.bazel  WORKSPACE
.github/: renovate.json
.github/workflows/: bazel.yaml
bzl/: requirements.bzl
courses/udacity_intro_to_tensorflow_for_deep_learning/: l03c01_classifying_images_of_clothing.ipynb
lib/python/: BUILD.bazel  requirements.txt  requirements_lock.txt
tensorflow/: BUILD.bazel  single_celsius_fahrenheit.py
